# parametric

./: CMakeLists.txt  ParametricScene.cpp  ParametricScene.h  README.md  main.cpp  parametric.frag  parametric.vert
apps/: CMakeLists.txt  osgparametricnode.cpp  parametric.cpp
igsosg/: CMakeLists.txt
igsosg/igs/modules/: CMakeLists.txt
igsosg/igs/modules/osgparametric/: CMakeLists.txt  ParametricNodeModule.cpp  ParametricNodeModule.hpp  guiparametric.igsml  osgParametricModulesAPI.h  osgparametric.igsml  parametric.igsml
models/: CMakeLists.txt  lens.ive
shaders/: parametric.vert  parametric3.vert
src/: CMakeLists.txt
src/osgParametric/: CMakeLists.txt  Export  ParametricNode.cpp  ParametricNode.h  ParametricScene.cpp  ParametricScene.h  parametric-programmable.vert  parametric.frag
