cmake_minimum_required(VERSION 2.8)

PROJECT(parametric)

set(BUILD_SHARED_LIBS ON CACHE BOOL "Build Shared libs")

FIND_PACKAGE(OpenThreads)
FIND_PACKAGE(osg)
FIND_PACKAGE(osgDB)
FIND_PACKAGE(osgUtil)
FIND_PACKAGE(osgGA)
FIND_PACKAGE(osgViewer)

INCLUDE_DIRECTORIES(
    ${CMAKE_SOURCE_DIR}/src
    ${OPENTHREADS_INCLUDE_DIR}
    ${OSG_INCLUDE_DIR}
)

LINK_DIRECTORIES(${OSG_LIB_DIR})

ADD_SUBDIRECTORY(src)
ADD_SUBDIRECTORY(apps)

SET(BUILD_OPENIGS_MODULES OFF CACHE BOOL "Build the OpenIGS interface modules")
IF(${BUILD_OPENIGS_MODULES})
    ADD_SUBDIRECTORY(igsosg)
ENDIF()

