cmake_minimum_required(VERSION 2.8)

PROJECT(parametric)

set (CMAKE_CXX_STANDARD 11)

set(CMAKE_DEBUG_POSTFIX "d" CACHE STRING "add a postfix, usually d on windows")
set(BUILD_SHARED_LIBS ON CACHE BOOL "Build Shared libs")

FIND_PACKAGE(OpenThreads)
FIND_PACKAGE(osg)
FIND_PACKAGE(osgDB)
FIND_PACKAGE(osgUtil)
FIND_PACKAGE(osgGA)
FIND_PACKAGE(osgViewer)

INCLUDE_DIRECTORIES(
    ${CMAKE_SOURCE_DIR}/src
    ${OPENTHREADS_INCLUDE_DIR}
    ${OSG_INCLUDE_DIR}
)

LINK_DIRECTORIES(${OSG_LIB_DIR})

ADD_SUBDIRECTORY(src)
ADD_SUBDIRECTORY(apps)

