SET(TARGET osgParametric)

SET(HEADERS
    Export
    ParametricNode.h
    ParametricScene.h
)

SET(SOURCES
    ParametricNode.cpp
    ParametricScene.cpp
)

ADD_LIBRARY(
    ${TARGET}
    ${HEADERS}
    ${SOURCES}
)

TARGET_LINK_LIBRARIES(
    ${TARGET}
    ${OSG_LIBRARIES}
    ${OSGVIEWER_LIBRARIES}
    ${OSGUTIL_LIBRARIES}
    ${OSGDB_LIBRARIES}
    ${OSGGA_LIBRARIES}
    ${OPENTHREADS_LIBRARIES}
)

SET_TARGET_PROPERTIES(
    ${TARGET}
    PROPERTIES
        DEBUG_POSTFIX ${CMAKE_DEBUG_POSTFIX}
        DEFINE_SYMBOL OSGPARAMETRIC_LIBRARY
)

INSTALL(
    TARGETS ${TARGET}
    RUNTIME DESTINATION bin COMPONENT Runtime
    LIBRARY DESTINATION lib COMPONENT Runtime
    ARCHIVE DESTINATION lib COMPONENT Development
)
